--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         <div class="navbar-brand">
           <a href="index.html">
             <img
-              src="./images/log.png"
+              src="log.png"
               alt="thapa eCommerce logo"
               class="logo"
               width="80%"
@@ -106,7 +106,7 @@
           >
             <figure>
               <img
-                src="./images/heroSection.svg"
+                src="heroSection.svg"
                 alt="coding languages using html css js"
               />
             </figure>
