--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                 class="nav-link add-to-cart-button"
                 id="cartValue"
               >
-                <i class="fa-solid fa-cart-shopping"></i> 0</a
+                <i class="fa-solid fa-cart-shopping"></i> </a
               >
             </li>
           </ul>
