--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 class="nav-link add-to-cart-button"
                 id="cartValue"
               >
-                <i class="fa-solid fa-cart-shopping"> 0 </i>
+                <i class="fa-solid fa-cart-shopping">  </i>
               </a>
             </li>
           </ul>
