--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                 class="nav-link add-to-cart-button"
                 id="cartValue"
               >
-                <i class="fa-solid fa-cart-shopping"></i> 0</a
+                <i class="fa-solid fa-cart-shopping"></i> </a
               >
             </li>
           </ul>
