--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
               Your Destination for Cutting-Edge Gadgets!
             </h1>
             <p class="hero-para">
-              Welcome to Thapa eComStore, your ultimate destination for
+              Welcome to Ecom-Store, your ultimate destination for
               cutting-edge gadgets! Explore the latest in tech innovation and
               style with us. Shop now and discover a world of possibilities!
             </p>
@@ -142,8 +142,8 @@
         <div class="div-extra grid grid-two--cols">
           <div class="extra-text">
             <p>new year sale</p>
-            <h3>get and extra 50% off</h3>
-            <a href="#">Show now</a>
+            <h3>get an extra 50% off</h3>
+            <a href="#">Shop now</a>
           </div>
           <div class="extra-img extra-laptop">
             <img src="./images/laptop.png" alt="" />
@@ -154,7 +154,7 @@
           <div class="extra-text">
             <p>new year sale</p>
             <h3>40% discount on speakers</h3>
-            <a href="#">Show now</a>
+            <a href="#">Shop now</a>
           </div>
           <div class="extra-img">
             <img src="./images/headphoneEcom.png" alt="" />
@@ -163,8 +163,8 @@
         <div class="div-extra grid grid-two--cols">
           <div class="extra-text">
             <p>new year sale</p>
-            <h3>get and extra 50% off</h3>
-            <a href="#">Show now</a>
+            <h3>get an extra 50% off</h3>
+            <a href="#">Shop now</a>
           </div>
           <div class="extra-img">
             <img src="./images/mobiles.png" alt="" />
