--- a/products.html
+++ b/products.html
@@ -13,7 +13,7 @@
  
 
     <link rel="stylesheet" href="style.css" />
-    <title>js ecom website</title>
+    <title>Ecom-Store</title>
   </head>
   <body>
     <header class="section-navbar">
@@ -75,8 +75,8 @@
         <div class="div-extra grid grid-two--cols">
           <div class="extra-text">
             <p>new year sale</p>
-            <h3>get and extra 50% off</h3>
-            <a href="#">Show now</a>
+            <h3>get an extra 50% off</h3>
+            <a href="#">Shop now</a>
           </div>
           <div class="extra-img extra-laptop">
             <img src="./images/laptop.png" alt="" />
@@ -87,7 +87,7 @@
           <div class="extra-text">
             <p>new year sale</p>
             <h3>40% discount on speakers</h3>
-            <a href="#">Show now</a>
+            <a href="#">Shop now</a>
           </div>
           <div class="extra-img">
             <img src="./images/headphoneEcom.png" alt="" />
@@ -97,8 +97,8 @@
         <div class="div-extra grid grid-two--cols">
           <div class="extra-text">
             <p>new year sale</p>
-            <h3>get and extra 50% off</h3>
-            <a href="#">Show now</a>
+            <h3>get an extra 50% off</h3>
+            <a href="#">Shop now</a>
           </div>
           <div class="extra-img">
             <img src="./images/mobiles.png" alt="" />
@@ -158,7 +158,7 @@
 
     <section class="section-products container">
       <div class="">
-        <h2 class="section-common--heading">Checkout Thapa Store</h2>
+        <h2 class="section-common--heading">Checkout Ecom-Store</h2>
       </div>
 
       <section class="container">
