--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
     <link rel="stylesheet" href="style.css" />
-    <title>js ecom website</title>
+    <title>Ecom-Store </title>
   </head>
   <body>
     <header class="section-navbar">
@@ -79,7 +79,7 @@
               Your Destination for Cutting-Edge Gadgets!
             </h1>
             <p class="hero-para">
-              Welcome to Thapa eComStore, your ultimate destination for
+              Welcome to  E-com-Store, your ultimate destination for
               cutting-edge gadgets! Explore the latest in tech innovation and
               style with us. Shop now and discover a world of possibilities!
             </p>
@@ -133,8 +133,8 @@
         <div class="div-extra grid grid-two--cols">
           <div class="extra-text">
             <p>new year sale</p>
-            <h3>get and extra 50% off</h3>
-            <a href="#">Show now</a>
+            <h3>get an extra 50% off</h3>
+            <a href="#">Shop now</a>
           </div>
           <div class="extra-img extra-laptop">
             <img src="./images/laptop.png" alt="" />
@@ -145,7 +145,7 @@
           <div class="extra-text">
             <p>new year sale</p>
             <h3>40% discount on speakers</h3>
-            <a href="#">Show now</a>
+            <a href="#">Shop now</a>
           </div>
           <div class="extra-img">
             <img src="./images/headphoneEcom.png" alt="" />
@@ -155,8 +155,8 @@
         <div class="div-extra grid grid-two--cols">
           <div class="extra-text">
             <p>new year sale</p>
-            <h3>get and extra 50% off</h3>
-            <a href="#">Show now</a>
+            <h3>get an extra 50% off</h3>
+            <a href="#">Shop now</a>
           </div>
           <div class="extra-img">
             <img src="./images/mobiles.png" alt="" />
@@ -216,7 +216,7 @@
 
     <section class="section-products container">
       <div class="">
-        <h2 class="section-common--heading">Checkout Thapa Store</h2>
+        <h2 class="section-common--heading">Checkout Ecom-Store</h2>
       </div>
 
       <section class="container">
@@ -278,9 +278,9 @@
     <!-- ========== Start Why Choose Us Section ========== -->
     <section class="section-why--choose">
       <div class="container">
-        <h2 class="section-common--heading">Why Choose Thapa Store</h2>
+        <h2 class="section-common--heading">Why Choose Ecom-Store</h2>
         <p class="section-common--subheading">
-          Choose Thapa EduHub for a holistic, enriching learning experience that
+          Choose Ecom-Store for a holistic, enriching learning experience that
           empowers you to achieve your goals.
         </p>
       </div>
@@ -291,7 +291,7 @@
             <p class="common-text--highlight">1</p>
             <h3 class="section-common--title">Wide Selection</h3>
             <p>
-              Thapa Store offers a diverse range of gadgets, from smartphones to
+              Ecom-Store offers a diverse range of gadgets, from smartphones to
               smart home devices, ensuring you find what you need to elevate
               your lifestyle and meet your tech requirements.
             </p>
@@ -305,7 +305,7 @@
             <p class="common-text--highlight">2</p>
             <h3 class="section-common--title">Quality Assurance</h3>
             <p>
-              Every gadget at Thapa Store undergoes rigorous quality checks,
+              Every gadget at Ecom-Store undergoes rigorous quality checks,
               guaranteeing reliability and performance, so you can shop with
               confidence knowing you're getting the best.
             </p>
@@ -319,7 +319,7 @@
             <p class="common-text--highlight">3</p>
             <h3 class="section-common--title">Competitive Prices</h3>
             <p>
-              Enjoy great value with Thapa Store's competitive prices on
+              Enjoy great value with Ecom-Store's competitive prices on
               high-quality gadgets, making top-of-the-line technology accessible
               to all without compromising on quality or performance.
             </p>
@@ -353,7 +353,7 @@
             <p class="common-text--highlight">5</p>
             <h3 class="section-common--title">Convenient Shopping</h3>
             <p>
-              With Thapa Store, shopping for gadgets is easy and convenient. Our
+              With Ecom-Store, shopping for gadgets is easy and convenient. Our
               user-friendly website and secure payment options ensure a seamless
               experience from browsing to checkout, all from the comfort of your
               home.
@@ -368,7 +368,7 @@
             <p class="common-text--highlight">6</p>
             <h3 class="section-common--title">Excellent Service</h3>
             <p>
-              Thapa Store is committed to providing excellent service to our
+              Ecom-Store is committed to providing excellent service to our
               customers. From prompt assistance with inquiries to efficient
               handling of orders and deliveries, we prioritize your satisfaction
               every step of the way.
@@ -385,7 +385,7 @@
         <div class="content_1">
           <img src="./images/logo.png" alt="logo" />
           <p>
-            Welcome to Thapa EcomStore, your ultimate destination for
+            Welcome to Ecom-Store, your ultimate destination for
             cutting-edge gadgets!
           </p>
           <img src="https://i.postimg.cc/Nj9dgJ98/cards.png" alt="cards" />
@@ -416,7 +416,7 @@
       </div>
       <div class="f-design">
         <div class="f-design-txt">
-          <p>Design and Code by Thapa Technical</p>
+          <p>Design and Code Technical</p>
         </div>
       </div>
     </footer>
