--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
         <div class="navbar-brand">
           <a href="index.html">
             <img
-              src="https://sdmntprwestus.oaiusercontent.com/files/00000000-147c-6230-9a5f-cadac68cc9b7/raw?se=2025-04-14T08%3A18%3A48Z&sp=r&sv=2024-08-04&sr=b&scid=2bf3f50c-f756-5da8-9454-8f542e47eece&skoid=e872f19f-7b7f-4feb-9998-20052dec61d6&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-04-14T06%3A30%3A29Z&ske=2025-04-15T06%3A30%3A29Z&sks=b&skv=2024-08-04&sig=yjeEr1tVCliAqQVkbNrLAov1kKg50is6DGS/pl6gcwg%3D"
+              src="./images/log.png"
               alt="thapa eCommerce logo"
               class="logo"
               width="80%"
