--- a/about.html
+++ b/about.html
@@ -42,7 +42,12 @@
         <div class="navbar-brand">
           <a href="index.html">
             <img
-              src="https://sdmntprwestus.oaiusercontent.com/files/00000000-bbfc-6230-84a1-2bdfca286d9e/raw?se=2025-04-14T08%3A25%3A10Z&sp=r&sv=2024-08-04&sr=b&scid=148165ba-c539-54e2-8821-37e0f225f563&skoid=e872f19f-7b7f-4feb-9998-20052dec61d6&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-04-14T07%3A04%3A25Z&ske=2025-04-15T07%3A04%3A25Z&sks=b&skv=2024-08-04&sig=7eK42BMDd0IFgl9Aog0EOkCEQHyNNML7SXh4gVwWb6E%3D"
+              src="<svg viewBox="0 0 300 80" xmlns="http://www.w3.org/2000/svg">
+  <rect x="20" y="20" width="260" height="40" stroke="black" stroke-width="2" fill="white"/>
+  <rect x="20" y="20" width="80" height="40" fill="black"/>
+  <text x="60" y="47" font-family="Arial, sans-serif" font-size="18" font-weight="bold" fill="white" text-anchor="middle">ECOM</text>
+  <text x="170" y="47" font-family="Arial, sans-serif" font-size="18" font-weight="bold" fill="black" text-anchor="middle">STORE</text>
+</svg>"
               alt="thapa eCommerce logo"
               class="logo"
               width="80%"
