--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
           <a href="index.html">
             <img
               src="<img src="logo.svg" 
-              alt="thapa eCommerce logo"
+              alt="Ecom-Store logo"
               class="logo"
               width="80%"
               height="auto"
