--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
               alt="Ecom-Store logo"
               class="logo"
               width="80%"
-              height="auto"
+              height="30%"
             />
           </a>
         </div>
