--- a/about.html
+++ b/about.html
@@ -42,11 +42,11 @@
         <div class="navbar-brand">
           <a href="index.html">
             <img
-              src="<img src="logo.svg" 
-              alt="Ecom-Store logo"
+              src="./images/log.png"
+              alt="thapa eCommerce logo"
               class="logo"
               width="80%"
-              height="30%"
+              height="auto"
             />
           </a>
         </div>
