--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
         <div class="navbar-brand">
           <a href="index.html">
             <img
-              src="./images/log.png"
+              src="https://github.com/Aqsaabbasi2690/repo-e-com/blob/main/public/images/Edit%20Image%20with%20_Ecom-Store_%20Text%20-%20Claude.html"
               alt="thapa eCommerce logo"
               class="logo"
               width="80%"
