--- a/about.html
+++ b/about.html
@@ -42,11 +42,21 @@
         <div class="navbar-brand">
           <a href="index.html">
             <img
-              src="./images/log.png"
+              src="<svg viewBox="0 0 290 90" xmlns="http://www.w3.org/2000/svg">
+  <!-- Border rectangle -->
+  <rect x="10" y="10" width="270" height="70" stroke="black" stroke-width="3" fill="white" />
+  
+  <!-- Black background rectangle for "ECOM" -->
+  <rect x="12" y="12" width="135" height="66" fill="black" />
+  
+  <!-- Text elements -->
+  <text x="80" y="52" font-family="Arial, sans-serif" font-size="24" font-weight="bold" fill="white" text-anchor="middle">ECOM</text>
+  <text x="215" y="52" font-family="Arial, sans-serif" font-size="24" font-weight="bold" text-anchor="middle">STORE</text>
+</svg>"
               alt="Ecom-Store logo"
               class="logo"
               width="80%"
-              height="auto"
+              height="30%"
             />
           </a>
         </div>
