--- a/about.html
+++ b/about.html
@@ -42,17 +42,7 @@
         <div class="navbar-brand">
           <a href="index.html">
             <img
-              src="<svg viewBox="0 0 290 90" xmlns="http://www.w3.org/2000/svg">
-  <!-- Border rectangle -->
-  <rect x="10" y="10" width="270" height="70" stroke="black" stroke-width="3" fill="white" />
-  
-  <!-- Black background rectangle for "ECOM" -->
-  <rect x="12" y="12" width="135" height="66" fill="black" />
-  
-  <!-- Text elements -->
-  <text x="80" y="52" font-family="Arial, sans-serif" font-size="24" font-weight="bold" fill="white" text-anchor="middle">ECOM</text>
-  <text x="215" y="52" font-family="Arial, sans-serif" font-size="24" font-weight="bold" text-anchor="middle">STORE</text>
-</svg>"
+              src="https://sdmntprwestus.oaiusercontent.com/files/00000000-147c-6230-9a5f-cadac68cc9b7/raw?se=2025-04-14T14%3A48%3A08Z&sp=r&sv=2024-08-04&sr=b&scid=261e3f20-3fc7-55f0-a57b-d6570cf5bfa1&skoid=a3336399-497e-45e5-8f28-4b88ecca3d1f&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-04-14T10%3A54%3A00Z&ske=2025-04-15T10%3A54%3A00Z&sks=b&skv=2024-08-04&sig=2LFwEgqXt0sjQultqR/X0RiIDN1tgtgcYk7axvSqIy8%3D"
               alt="Ecom-Store logo"
               class="logo"
               width="80%"
