--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
         <div class="navbar-brand">
           <a href="index.html">
             <img
-              src="https://sdmntprwestus.oaiusercontent.com/files/00000000-147c-6230-9a5f-cadac68cc9b7/raw?se=2025-04-14T14%3A48%3A08Z&sp=r&sv=2024-08-04&sr=b&scid=261e3f20-3fc7-55f0-a57b-d6570cf5bfa1&skoid=a3336399-497e-45e5-8f28-4b88ecca3d1f&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-04-14T10%3A54%3A00Z&ske=2025-04-15T10%3A54%3A00Z&sks=b&skv=2024-08-04&sig=2LFwEgqXt0sjQultqR/X0RiIDN1tgtgcYk7axvSqIy8%3D"
+              src="https://sdmntprwestus.oaiusercontent.com/files/00000000-0e08-6230-8448-9d423b921704/raw?se=2025-04-14T14%3A48%3A08Z&sp=r&sv=2024-08-04&sr=b&scid=eb7d0164-f726-54f1-8518-422ecfb66fd7&skoid=a3336399-497e-45e5-8f28-4b88ecca3d1f&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-04-14T07%3A17%3A07Z&ske=2025-04-15T07%3A17%3A07Z&sks=b&skv=2024-08-04&sig=Cnj8OfCNrILvpsJes7k9qYPYiJtaLOvZxkr3e%2BsWDew%3D"
               alt="Ecom-Store logo"
               class="logo"
               width="50%"
