--- a/about.html
+++ b/about.html
@@ -45,8 +45,8 @@
               src="https://sdmntprwestus.oaiusercontent.com/files/00000000-0e08-6230-8448-9d423b921704/raw?se=2025-04-14T14%3A48%3A08Z&sp=r&sv=2024-08-04&sr=b&scid=eb7d0164-f726-54f1-8518-422ecfb66fd7&skoid=a3336399-497e-45e5-8f28-4b88ecca3d1f&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-04-14T07%3A17%3A07Z&ske=2025-04-15T07%3A17%3A07Z&sks=b&skv=2024-08-04&sig=Cnj8OfCNrILvpsJes7k9qYPYiJtaLOvZxkr3e%2BsWDew%3D"
               alt="Ecom-Store logo"
               class="logo"
-              width="50%"
-              height="20%"
+              width="80%"
+              height="auto"
             />
           </a>
         </div>
