--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
         <div class="navbar-brand">
           <a href="index.html">
             <img
-              src="./images/log.png"
+              src="https://sdmntprwestus.oaiusercontent.com/files/00000000-0e08-6230-8448-9d423b921704/raw?se=2025-04-15T12%3A27%3A22Z&sp=r&sv=2024-08-04&sr=b&scid=14559377-c7b2-5628-87b7-dc645b25ec3e&skoid=dfdaf859-26f6-4fed-affc-1befb5ac1ac2&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-04-15T05%3A29%3A46Z&ske=2025-04-16T05%3A29%3A46Z&sks=b&skv=2024-08-04&sig=4r1c96BvP3m6DVVJbS0jQZQ817mTENk9j4SENT%2B%2ByB4%3D"
               alt="thapa eCommerce logo"
               class="logo"
               width="80%"
