--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
         <div class="navbar-brand">
           <a href="index.html">
             <img
-              src="https://sdmntprsouthcentralus.oaiusercontent.com/files/00000000-d47c-61f7-b76e-ff8f19a0f9ac/raw?se=2025-04-15T13%3A01%3A05Z&sp=r&sv=2024-08-04&sr=b&scid=044f9bbc-10f6-5310-8fbc-fd927416108b&skoid=dfdaf859-26f6-4fed-affc-1befb5ac1ac2&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-04-14T20%3A17%3A52Z&ske=2025-04-15T20%3A17%3A52Z&sks=b&skv=2024-08-04&sig=61ygrMOmnNrDRgM%2BWK8aoThzAb9ircW9az/HO/WW%2BFM%3D"
+              src="./images/logo ecom.png"
               alt="eCommerce logo"
               class="logo"
               width="80%"
