--- a/about.html
+++ b/about.html
@@ -331,7 +331,7 @@
     <footer class="section-footer">
       <div class="footer-container container">
         <div class="content_1">
-          <img src="./images/logo.png" alt="logo" />
+          <img src="./images/logo ecom.png" alt="logo" />
           <p>
             Welcome to Ecom-Store, your ultimate destination for
             cutting-edge gadgets!
