--- a/addToCart.html
+++ b/addToCart.html
@@ -41,8 +41,8 @@
         <div class="navbar-brand">
           <a href="index.html">
             <img
-              src="./images/log.png"
-              alt="thapa eCommerce logo"
+              src="./images/logo ecom.png"
+              alt="eCommerce logo"
               class="logo"
               width="80%"
               height="auto"
@@ -140,7 +140,7 @@
     <footer class="section-footer">
       <div class="footer-container container">
         <div class="content_1">
-          <img src="./images/logo.png" alt="logo" />
+        
           <p>
             Welcome to Thapa EcomStore, your ultimate destination for
             cutting-edge gadgets!
@@ -173,7 +173,7 @@
       </div>
       <div class="f-design">
         <div class="f-design-txt">
-          <p>Design and Code by Thapa Technical</p>
+          <p>Design </p>
         </div>
       </div>
     </footer>
