--- a/about.html
+++ b/about.html
@@ -364,7 +364,7 @@
       </div>
       <div class="f-design">
         <div class="f-design-txt">
-          <p>Design and Code Technical</p>
+          <p>Design and Code </p>
         </div>
       </div>
     </footer>
