--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div class="navbar-brand">
           <a href="index.html">
             <img
-              src="./public/images/log.png"
-              alt="thapa eCommerce logo"
+              src="./images/logo ecom.png"
+              alt="eCommerce logo"
               class="logo"
               width="80%"
               height="auto"
@@ -327,7 +327,7 @@
         </div>
         <div class="choose-center-div" data-aos="zoom-in" data-aos-delay="300">
           <figure>
-            <img src="./images/ecompost.png" alt="thapa technical home page " />
+            <img src="./images/ecompost.png" alt=" home page " />
           </figure>
         </div>
         <div class="choose-right-div">
@@ -416,7 +416,7 @@
       </div>
       <div class="f-design">
         <div class="f-design-txt">
-          <p>Design and Code Technical</p>
+          <p>Design and Code </p>
         </div>
       </div>
     </footer>
