--- a/products.html
+++ b/products.html
@@ -32,8 +32,8 @@
         <div class="navbar-brand">
           <a href="index.html">
             <img
-              src="./public/images/log.png"
-              alt="thapa eCommerce logo"
+              src="./images/logo ecom.png
+              alt="eCommerce logo"
               class="logo"
               width="80%"
               height="auto"
