--- a/products.html
+++ b/products.html
@@ -32,7 +32,7 @@
         <div class="navbar-brand">
           <a href="index.html">
             <img
-              src="./images/logo ecom.png
+              src="./images/logo ecom.png"
               alt="eCommerce logo"
               class="logo"
               width="80%"
